Fixed issue with dark mode

--- a/workout_app/src/index.css
+++ b/workout_app/src/index.css
@@ -4,7 +4,7 @@
   font-weight: 400;
 
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
+  /* color: rgba(255, 255, 255, 0.87); */
   /* background-color: #242424; */
 
   font-synthesis: none;
@@ -14,15 +14,13 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-
 :root {
-    background-color: #c8d8b9;
-    overflow-x: hidden;
+  background-color: #c8d8b9;
+  overflow-x: hidden;
 }
 button {
-    background-color: #f9f9f9;
+  background-color: #f9f9f9;
 }
-
 
 a {
   font-weight: 500;
